@@ -34,34 +34,34 @@ public class Engine extends GameEngine {
         if (game.gameSequence.isEmpty()) {
             //This block indicates first move of game.
             myNextMove = gb.getMoveCommon(enemyMoves, movesLeft, myMoves);
-            myMoves.add(myNextMove);
+            myMoves.add(Integer.valueOf(myNextMove));
             movesLeft.remove(Integer.valueOf(myNextMove));
         } else if (game.gameSequence.size() == 8) {
             //This block indicates first move of ACHI.
             gb = new AchiBehavior();
             enemyLastMove = game.gameSequence.getLast();
-            enemyMoves.add(enemyLastMove);
+            enemyMoves.add(Integer.valueOf(enemyLastMove));
             movesLeft.remove(Integer.valueOf(enemyLastMove));
             myNextMove = gb.getMoveCommon(enemyMoves, movesLeft, myMoves);
-            myMoves.add(myNextMove);
-            movesLeft.set(0, myNextMove);
+            myMoves.add(Integer.valueOf(myNextMove));
+            movesLeft.set(0, Integer.valueOf(myNextMove));
         } else if (game.gameSequence.size() > 8) {
             //This block indicates full ACHI mode.
             gb = new AchiBehavior();
             enemyMoves.remove(Integer.valueOf(game.gameSequence.getLast()));
-            enemyMoves.add(movesLeft.get(movesLeft.size() - 1));
-            movesLeft.set(0, game.gameSequence.getLast());
+            enemyMoves.add(Integer.valueOf(movesLeft.get(movesLeft.size() - 1)));
+            movesLeft.set(0, Integer.valueOf(game.gameSequence.getLast()));
             myNextMove = gb.getMoveCommon(enemyMoves, movesLeft, myMoves);
             myMoves.remove(Integer.valueOf(myNextMove));
-            myMoves.add(movesLeft.get(movesLeft.size() - 1));
-            movesLeft.set(0, myNextMove);
+            myMoves.add(Integer.valueOf(movesLeft.get(movesLeft.size() - 1)));
+            movesLeft.set(0, Integer.valueOf(myNextMove));
         } else {
             //This block indicates normal mode.
             enemyLastMove = game.gameSequence.getLast();
-            enemyMoves.add(enemyLastMove);
+            enemyMoves.add(Integer.valueOf(enemyLastMove));
             movesLeft.remove(Integer.valueOf(enemyLastMove));
             myNextMove = gb.getMoveCommon(enemyMoves, movesLeft, myMoves);
-            myMoves.add(myNextMove);
+            myMoves.add(Integer.valueOf(myNextMove));
             movesLeft.remove(Integer.valueOf(myNextMove));
         }
         //Debugging code comment block
